# C-Projects

./: .gitignore
Makefile for Linux/: Makefile
Makefile for Win/: Makefile
bulletin/: CMakeLists.txt  bulletin.c  bulletin.h  file.c  file.h  main.c  main.h  student.c  student.h
cat/: CMakeLists.txt  cat.c  cat.h  comm.c  operation.c  operation.h
cat/include/: argop.h  detect-args.h
detect-args/: CMakeLists.txt  Makefile  detect-args.c  detect-args.h  libdetect-args.c
echo/: echo.c  echo.h
echo/include/: argop.h
handle-csv/: error.c  error.h  file.c  file.h  main.c  main.h
income-csv/: data.h  error.c  error.h  list.c  list.h  main.c  main.h
ls/: CMakeLists.txt  ls.c  ls.h  manage_op.c  manage_op.h  op.c  op.h
new-alias/: comm.c  comm.h  new-alias.c  new-alias.h  option.h  subcomm.c  subcomm.h
new-alias/builds/: new-alias
new-alias/include/: detect-args.h
new-ninstall/: CMakeLists.txt  comm.c  comm.h  ninstall.c  ninstall.h
ninstall/: CMakeLists.txt  Makefile  commands.c  commands.h  detect-args.h  manage-op.c  manage-op.h  ninstall  ninstall.c  ninstall.h  op.c  op.h  subcommands.c  subcommands.h
ninstall/builds/: ninstall
nunstall/: nunstall.c  nunstall.h  option.h  subcomm.c  subcomm.h
nunstall/builds/: nunstall
pokemon/: README.md  error.c  error.h  file.c  file.h  main.c  main.h  mov-file.h  moves.csv  pkm-file.c  pkm-file.h  pokemon.c  pokemon.csv  pokemon.h
pura-garra/: file.c  file.h  main.c  main.h  sales.c  sales.h
